lombok & readable opencv code

--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -24,5 +24,8 @@ dependencies {
     // Lancers -- Dependencies
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.12' // RoadRunner
     implementation 'org.openftc:easyopencv:1.5.1' // OpenCV
-}
 
+    // https://projectlombok.org
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+}
