--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -22,10 +22,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
     // Lancers -- Dependencies
-    implementation 'com.acmerobotics.dashboard:dashboard:0.4.12' // RoadRunner
-    implementation 'org.openftc:easyopencv:1.5.1' // OpenCV
 
-    // https://projectlombok.org
+    // -- https://acmerobotics.github.io/ftc-dashboard/gettingstarted
+    //    Also needed for RoadRunner
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.14'
+
+    // -- https://projectlombok.org
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
 }
