--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -30,4 +30,7 @@ dependencies {
     // -- https://projectlombok.org
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+    // -- JavaTuples (for me!)
+    implementation 'org.javatuples:javatuples:1.2'
 }
